# aiflow

./: .gitignore  Code2Claude系统开发完成报告.md  LICENSE  README.md  install_code2claude.py
aiflow/: CLAUDE.md  EXPERIMENT_README.md  README.md  aiflow.md  test-paths.sh
aiflow/analyzer/: analyze_project.py  analyze_project_old.py  (+4 more)
aiflow/specs/backend/: pyproject.toml  requirements.txt
aiflow/specs/backend/aiflow/: __init__.py
aiflow/specs/backend/aiflow/adapters/: __init__.py  base.py  claude.py
aiflow/specs/backend/aiflow/analysis/: __init__.py  engine.py  queue.py
aiflow/specs/backend/aiflow/prompts/: __init__.py  manager.py  renderer.py  validator.py
aiflow/specs/backend/aiflow/protocol/: __init__.py  entities.py  serializer.py  validator.py
aiflow/specs/backend/prompts/: registry.yaml
aiflow/specs/backend/prompts/comprehensive/analysis/: v1.0.0.yaml
aiflow/specs/backend/prompts/python/concurrency-detection/: v1.0.0.yaml
aiflow/specs/backend/prompts/python/execution-inference/: v1.0.0.yaml
aiflow/specs/backend/prompts/python/project-understanding/: v1.0.0.yaml
aiflow/specs/backend/prompts/python/semantic-analysis/: v1.0.0.yaml
aiflow/specs/backend/prompts/python/structure-recognition/: v1.1.0.yaml
claudeflow/: .claudeflow.yml  .coverage  .gitattributes  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  MCP_CONVERSION_REPORT.md  MCP_SETUP.md  README.md  REFACTORING_REPORT.md  TESTING.md  cli.py  install_mcp.py  mcp_server.py  package.json  pyproject.toml  requirements-dev.txt  test_mcp.py
code2claude/: IMPROVEMENTS.md  MCP_CONVERSION_REPORT.md  MCP_SETUP.md  QUICKSTART.md  README.md  __init__.py  __main__.py  cli.py  install_mcp.py  mcp_config.json  mcp_server.py  package.json  requirements.txt  test_mcp.py  uninstall_mcp.py
code2flow-master/: Code2flow项目分析.txt  多个ai综合对Code2flow项目的看法.txt
(+141 files in other folders)
